# scendere-node

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Info.plist.in  LICENSE  README.md  SECURITY.md  Scendere.rc  doxygen.config  scenderecurrency-beta.spec.in  scenderecurrency.spec.in  valgrind.supp
api/flatbuffers/: scendereapi.fbs
ci/: build-centos.sh  build-deploy.sh  build-gitlab.sh  build-travis.sh  deploy-docker.sh  deploy-travis.sh  record_rep_weights.py  test.sh
ci/actions/: deploy.sh
ci/impl/: clang-format.sh  cmake-format.sh  code-inspector.sh
coverage/: CMakeLists.txt
crypto/ed25519-donna/: ed25519-hash-custom.h
debian-control/: postinst.in  postrm.in
docker/ci/: Dockerfile-base  Dockerfile-clang  Dockerfile-clang-6  Dockerfile-gcc  build.sh
docker/node/: Dockerfile  build.sh  entry.sh
doxygen/: MAIN_PAGE.md
etc/systemd/: scenderecurrency-beta.service  scenderecurrency-test.service  scenderecurrency.service
rocksdb/: CMakeLists.txt
scendere-pow-server/: .clang-format.base  CMakeLists.txt  LICENSE  README.md
scendere-pow-server/ci/: travis-deploy.sh
scendere-pow-server/public/: app_queue.js  index.html
scendere/core_test/: active_transactions.cpp  block.cpp  block_store.cpp  blockprocessor.cpp  bootstrap.cpp  cli.cpp  confirmation_height.cpp  confirmation_solicitor.cpp  conflicts.cpp  core_test_main.cc  difficulty.cpp  distributed_work.cpp  election.cpp  election_scheduler.cpp  epochs.cpp  frontiers_confirmation.cpp  gap_cache.cpp  ipc.cpp  ledger.cpp  locks.cpp  (+28 more)
scendere/scendere_node/: CMakeLists.txt  daemon.cpp  daemon.hpp  entry.cpp
scendere/scendere_rpc/: CMakeLists.txt  entry.cpp
systest/: cli_wallet_create.sh  node_initialize.sh  set_bandwidth_params.sh
util/: changelog.py  changelog_generator  makesrc
(+358 files in other folders)
